slider counting issue in home page and mobile layout alignment and size fixed

--- a/src/components/founder/founder.component.scss
+++ b/src/components/founder/founder.component.scss
@@ -812,6 +812,10 @@ span.thumbnailIndex {
     padding-right: 5px;
     line-height: 18px;
   }
+  .founderSection-rightOuter.heroSlide1 .founderTitleSliderBox,
+  .founderSection-rightOuter.heroSlide5 .founderTitleSliderBox {
+    left: 55%;
+  }
 }
 
 @media screen and (max-width: 375px) {
